# dark-web-mirror-traffic-detection

./: .gitattributes  .gitignore  DATA_LICENSE.md  LICENSE  README.md  environment_versions.json  file_manifest_sha256.csv  pyproject.toml  requirements.txt
docs/: DATASET.md  EXPERIMENTS.md  REPRODUCIBILITY_CHECKLIST.md
results/model_outputs/: pcapng_seq506_all_model_performance_time.csv  pcapng_seq506_all_model_performance_time_config.json
results/paper_tables/: table3_initial_time_packet_count_statistics.csv  table3_initial_time_packet_count_statistics.md  table3_initial_time_window.csv  table3_initial_time_window.md  table5_handshake_ablation.csv  table5_handshake_ablation.md  table6_sequence_length_reduction.csv  table6_sequence_length_reduction.md  table7_all_model_inference_time_ms.csv  table7_all_model_inference_time_ms.md  table7_all_model_pcapng_end_to_end_time_ms.csv  table7_all_model_pcapng_end_to_end_time_ms.md  table7_all_model_pcapng_time_compact_ms.csv  table7_all_model_pcapng_time_compact_ms.md  table7_model_performance_comparison.csv  table7_model_performance_comparison.md  table8_tcn_resnet1d_hyperparameter_setting.csv  table8_tcn_resnet1d_hyperparameter_setting.md  table8_tcn_resnet1d_tuning_seq506_summary.csv  table8_tcn_resnet1d_tuning_seq506_summary.md  table_all_model_single_sample_forward_time_ms.csv  table_all_model_single_sample_forward_time_ms.md
results/resnet1d_tuning/: R01_result.json  R01_val_threshold_search.csv  R02_result.json  (+35 more)
scripts/: inspect_dataset.py  reproduce_tables.py  train_reference_model.py  tune_resnet1d.py  tune_tcn.py
(+55 files in other folders)
